# wmbrbot

./: README.md  pyproject.toml
wmbrbot/: __main__.py  bot.py  wmbr.py
